--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 
 function buttonClick() {
 	var target = document.getElementById('target');
-    target.innerHTML = 'Welcome Back';
+    target.innerHTML = 'gone';
 }
 
 </script>
 
 <style type="text/css">
 h1 {
-	color: #ff0000;
+	color: #0000ff;
+	font-size: 50pt;
 }
 
 </style>
@@ -30,7 +31,7 @@ h1 {
 
 <!-- 本文 -->
 <body>
-	<h1>テストページへようこそ</h1>
+	<h1>Welcome to the Test Page</h1>
 	<button onclick="buttonClick()">Push Me</button>
 	<h2 id="target"></h2>
 </body>
